2016-02-07  Natalia Portillo  <claunia@claunia.com>

	* Device/AtaCommands.cs:
	* DiscImageChef.Devices.csproj:
	* Device/AtaCommands/AtaCommands.cs:
	* Device/AtaCommands/AtapiCommands.cs:
	  Move ATA/ATAPI commands to a separate folder.

2016-02-04  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands/SPC.cs:
	  Added MODE SELECT (6) and MODE SELECT (10) commands.

2016-02-03  Natalia Portillo  <claunia@claunia.com>

	* Device/Constructor.cs:
	  Corrected detecting USB or FireWire attached CD/DVD/BD and
	  tape drives.
	Try ATA identify on USB or FireWire that don't have SCSI
	  INQUIRY.

2016-01-15  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands/SSC.cs:
	  Corrected ReportDensitySupport.

2016-01-14  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands/SyQuest.cs:
	  Corrected typo

2016-01-14  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Devices.csproj:
	* Device/ScsiCommands/SyQuest.cs:
	  Added SyQuest vendor commands.

2016-01-14  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* DiscImageChef.Devices.csproj:
	* Device/ScsiCommands/Plasmon.cs:
	  Added Plasmon vendor commands.

	* Device/ScsiCommands/Pioneer.cs:
	  Added Pioner READ CD-XA vendor command.

2016-01-13  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	  Added M-Systems vendor commands.

2016-01-13  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* DiscImageChef.Devices.csproj:
	  Implemented Certance, Fujitsu and Hewlett-Packard vendor
	  commands.

	* Device/ScsiCommands/Certance.cs:
	  Implemented Certance vendor commands.

	* Device/ScsiCommands/Fujitsu.cs:
	  Implemented Fujitsu vendor commands.

	* Device/ScsiCommands/HP.cs:
	  Implemented Hewlett-Packard vendor commands.

2016-01-13  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* DiscImageChef.Devices.csproj:
	* Device/ScsiCommands/ArchiveCorp.cs:
	  Added vendor commands for Archive Corporation Viper 2060S,
	  2125S and 2150S.
